[package]
name = "crwl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aprox_eq = "1.1.0"
gilrs = "0.10.1"
gpio = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dependencies.rbtcs]
path = "./rbtcs"
version = "0.1.0"
