[package]
name = "crwl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gilrs = "0.10.1"
gpio = "0.4.1"

[dependencies.rbtcs]
path = "./rbtcs"
version = "0.1.0"

[dependencies.aprox_eq]
path = "./aprox_eq"
version = "0.1.0"

[dependencies.aprox_derive]
path = "./aprox_derive"
version = "0.1.0"
