[package]
name = "mecanum"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpio = "0.4.1"

[dependencies.aprox_eq]
path = "../aprox_eq"
version = "0.1"

[dependencies.aprox_derive]
path = "../aprox_derive"
version = "0.1"

[dependencies.header_derive]
path = "../header_derive"
version = "0.1"
